Use Map.copyOf in lucene core (#649)
This cuts over several places that use the pattern of creating a copy of
the supplied map with Map.copyOf.